tests/fail/inferred_variable_incompatibles_type.tig
let
    var a := "20"
    var b := 1
in
    b = a;
    b := "a";
    a := 1
end
